Wizard reload configuration from file, but warns user if configuration has changed.

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,6 +3,7 @@
     <file>images/QGIS Splash.png</file>
     <file>images/icons/edit_settings.png</file>
     <file>images/icons/help-content.png</file>
+    <file>images/icons/warning_large.png</file>
     <file>images/icons/info.png</file>
     <file>images/icons/info_small.png</file>
     <file>images/icons/login.png</file>
@@ -88,6 +89,6 @@
     <file>images/icons/layer.gif</file>
     <file>images/icons/table_designer.png</file>
     <file>images/icons/db_server_settings.png</file>
-      <file>images/icons/options.png</file>
+    <file>images/icons/options.png</file>
   </qresource>
 </RCC>
