--- a/ui/wizard/ui_entity_depend.ui
+++ b/ui/wizard/ui_entity_depend.ui
@@ -25,11 +25,14 @@
      <property name="spacing">
       <number>0</number>
      </property>
+     <property name="leftMargin">
+      <number>0</number>
+     </property>
      <item>
       <widget class="QLabel" name="label">
        <property name="maximumSize">
         <size>
-         <width>40</width>
+         <width>80</width>
          <height>16777215</height>
         </size>
        </property>
@@ -37,7 +40,10 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="../../resources.qrc">:/plugins/stdm/images/icons/help-content.png</pixmap>
+        <pixmap resource="../../resources.qrc">:/plugins/stdm/images/icons/warning_large.png</pixmap>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
