--- a/ui/wizard/ui_stdm_config.ui
+++ b/ui/wizard/ui_stdm_config.ui
@@ -440,6 +440,19 @@
        <property name="bottomMargin">
         <number>9</number>
        </property>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Description</string>
+         </property>
+         <property name="margin">
+          <number>0</number>
+         </property>
+         <property name="indent">
+          <number>-1</number>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="minimumSize">
@@ -478,6 +491,19 @@
           <font>
            <pointsize>9</pointsize>
           </font>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLabel" name="lblDesc">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>TextLabel</string>
          </property>
         </widget>
        </item>
@@ -543,19 +569,6 @@
            </widget>
           </item>
          </layout>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLabel" name="lblDesc">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>TextLabel</string>
-         </property>
         </widget>
        </item>
       </layout>
@@ -1017,7 +1030,7 @@
        <number>50</number>
       </property>
       <property name="bottomMargin">
-       <number>3</number>
+       <number>5</number>
       </property>
       <item>
        <widget class="QLabel" name="label_5">
@@ -1063,7 +1076,7 @@
       <item>
        <widget class="QCheckBox" name="cbMultiParty">
         <property name="text">
-         <string>Allow party entity in multiple STR</string>
+         <string>Allow party to be linked to multiple spatial unit in social tenure relationship</string>
         </property>
        </widget>
       </item>
