Fixed bug #95 that failed to show newly added document type after restarting QGIS

--- a/ui/wizard/ui_stdm_config.ui
+++ b/ui/wizard/ui_stdm_config.ui
@@ -180,6 +180,9 @@
           <height>30</height>
          </size>
         </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
         <property name="placeholderText">
          <string>Specify path to save document templates</string>
         </property>
