Added enhancement id #71, information shown when updating the database is now saved in a file (update_info.log) under '.stdm' folder

--- a/ui/wizard/ui_stdm_config.ui
+++ b/ui/wizard/ui_stdm_config.ui
@@ -1021,6 +1021,9 @@
     <string>Define entities to participate in Social Tenure Relations views</string>
    </property>
    <layout class="QFormLayout" name="formLayout_9">
+    <property name="fieldGrowthPolicy">
+     <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+    </property>
     <item row="0" column="1">
      <layout class="QVBoxLayout" name="verticalLayout">
       <property name="spacing">
