Fixed source document issues

--- a/ui/ui_doc_item.ui
+++ b/ui/ui_doc_item.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>502</width>
-    <height>34</height>
+    <height>64</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>50</width>
-    <height>34</height>
+    <height>64</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>35</height>
+    <height>64</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -52,13 +52,13 @@
      <property name="minimumSize">
       <size>
        <width>100</width>
-       <height>30</height>
+       <height>60</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
-       <height>50</height>
+       <height>60</height>
       </size>
      </property>
      <property name="styleSheet">
@@ -74,7 +74,26 @@
       <property name="margin">
        <number>5</number>
       </property>
-      <item row="0" column="0">
+      <item row="0" column="2">
+       <widget class="QProgressBar" name="pgBar">
+        <property name="minimumSize">
+         <size>
+          <width>90</width>
+          <height>16</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>90</width>
+          <height>16</height>
+         </size>
+        </property>
+        <property name="value">
+         <number>24</number>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
        <widget class="QLabel" name="lblName">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -108,26 +127,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QProgressBar" name="pgBar">
-        <property name="minimumSize">
-         <size>
-          <width>90</width>
-          <height>16</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>90</width>
-          <height>16</height>
-         </size>
-        </property>
-        <property name="value">
-         <number>24</number>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
+      <item row="0" column="3">
        <widget class="QLabel" name="lblClose">
         <property name="minimumSize">
          <size>
@@ -155,6 +155,37 @@
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="lblThumbnail">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>48</width>
+          <height>48</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>48</width>
+          <height>48</height>
+         </size>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Sunken</enum>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
