--- a/ui/ui_options.ui
+++ b/ui/ui_options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>610</width>
-    <height>514</height>
+    <height>539</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,8 +40,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>592</width>
-        <height>459</height>
+        <width>588</width>
+        <height>473</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
@@ -90,6 +90,9 @@
          <property name="maxLength">
           <number>500</number>
          </property>
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item row="0" column="1" colspan="2">
@@ -133,7 +136,7 @@
              <number>500</number>
             </property>
             <property name="readOnly">
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -156,7 +159,7 @@
              <number>500</number>
             </property>
             <property name="readOnly">
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
