Updated stdm.pro and added text to forms add, edit, remove buttons

--- a/ui/ui_view_str.ui
+++ b/ui/ui_view_str.ui
@@ -119,41 +119,14 @@
            <string>Search Results:</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
+           <property name="topMargin">
+            <number>5</number>
+           </property>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_3">
-             <item>
-              <widget class="QPushButton" name="addSTR">
-               <property name="text">
-                <string>Add</string>
-               </property>
-               <property name="icon">
-                <iconset resource="../resources.qrc">
-                 <normaloff>:/plugins/stdm/images/icons/add.png</normaloff>:/plugins/stdm/images/icons/add.png</iconset>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="editSTR">
-               <property name="text">
-                <string>Edit</string>
-               </property>
-               <property name="icon">
-                <iconset resource="../resources.qrc">
-                 <normaloff>:/plugins/stdm/images/icons/edit.png</normaloff>:/plugins/stdm/images/icons/edit.png</iconset>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QPushButton" name="deleteSTR">
-               <property name="text">
-                <string>Delete</string>
-               </property>
-               <property name="icon">
-                <iconset resource="../resources.qrc">
-                 <normaloff>:/plugins/stdm/images/icons/remove.png</normaloff>:/plugins/stdm/images/icons/remove.png</iconset>
-               </property>
-              </widget>
-             </item>
+            <layout class="QVBoxLayout" name="toolbarVBox">
+             <property name="spacing">
+              <number>0</number>
+             </property>
             </layout>
            </item>
            <item>
