--- a/ui/wizard/ui_column_editor.ui
+++ b/ui/wizard/ui_column_editor.ui
@@ -104,7 +104,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Is mandatory</string>
+      <string>Mandatory</string>
      </property>
      <property name="checked">
       <bool>false</bool>
@@ -120,7 +120,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Is searchable</string>
+      <string>Searchable</string>
      </property>
     </widget>
    </item>
@@ -133,7 +133,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Is unique</string>
+      <string>Unique</string>
      </property>
     </widget>
    </item>
@@ -146,7 +146,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Is column Indexed</string>
+      <string>Column Indexed</string>
      </property>
     </widget>
    </item>
