--- a/ui/ui_gps_tool.ui
+++ b/ui/ui_gps_tool.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>597</width>
-    <height>202</height>
+    <height>210</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>GPS Points Importer</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
